# DSMapStudio

./: .editorconfig  .gitignore  .gitmodules  DSMapStudio.sln  Directory.Build.props  LICENSE  README.md  Run Mapstudio.txt
AddChr/: AddChr.csproj  Program.cs
ColBakeTest/: ColBakeTest.csproj  Program.cs
DSMSPortable/: DSMSPortable.csproj  Program.cs
DSMapStudio/: DSMapStudio.csproj  LaunchWithoutVulkan.bat  Program.cs  imgui.ini  imgui.ini.backup
DSMapStudio_LowRequirements/: DSMapStudio_LowRequirements.csproj  Program.cs  app.manifest
DecompileAllScripts/: DecompileAllScripts.csproj  Program.cs
FSParam/: FSParam.csproj  Param.cs
HKX2/: Class1.cs  HKX2.csproj  IHavokObject.cs  PackFileCommon.cs  PackFileDeserializer.cs  PackFileSerializer.cs
HKX2ReadWrite/: HKX2ReadWrite.csproj  Program.cs
HKXClassGen/: HKXClassGen.csproj  Program.cs
Lib/: Lidgren.Network.xml  NavGen.exp  NavGen.lib
MSBTypeGen/: Program.cs
NavGen/: NavGen.vcxproj  NavGen.vcxproj.filters  bvhbuilder.cpp  dllmain.cpp  framework.h
SoapstoneLib/: LICENSE
SoulsFormats/: README.md  SoulsFormats.sln
StudioCore/: AssetLocator.cs  Assetdex.cs  CFG.cs  ColorSpaceHandling.cs  DDSDeswizzler.cs  EditorCommandQueue.cs  EulerUtils.cs  FeatureFlags.cs  FlverShadingMode.cs  FlverSubmeshRenderer.cs  ForkAwesomFont.cs  FrameCounter.cs  GLRenderer.cs  GameType.cs  ImGuiRenderer.cs  InputTracker.cs  KeyBindings.cs  MapStudioNew.cs  NavGen.cs  NewAnimSkeleton.cs  NewMesh.cs  (+16 more)
src/Andre/Andre.Native/native/: CMakeLists.txt  platform.h
src/Andre/Andre.Native/native/windows/: platform_windows.cpp
(+10829 files in other folders)
